--- a/glide.yaml
+++ b/glide.yaml
@@ -12,3 +12,95 @@ import:
 - package: google.golang.org/genproto
   subpackages:
   - googleapis/api/annotations
+- package: github.com/lileio/lile
+- package: golang.org/x/text
+  subpackages:
+  - secure/bidirule
+  - unicode/norm
+- package: github.com/golang/mock
+  version: ^1.0.0
+  subpackages:
+  - gomock
+- package: github.com/grpc-ecosystem/go-grpc-middleware
+- package: github.com/grpc-ecosystem/go-grpc-prometheus
+  version: ^1.1.0
+- package: github.com/grpc-ecosystem/grpc-opentracing
+  subpackages:
+  - go/otg
+- package: github.com/xtgo/set
+- package: github.com/xlab/treeprint
+- package: github.com/spf13/cobra
+- package: github.com/spf13/pflag
+  version: ^1.0.0
+- package: github.com/serenize/snaker
+- package: github.com/mattn/go-colorable
+  version: ^0.0.9
+- package: github.com/fatih/color
+  version: ^1.5.0
+- package: google.golang.org/grpc
+  version: ^1.5.2
+  subpackages:
+  - status
+- package: github.com/sirupsen/logrus
+  version: ^1.0.3
+- package: github.com/prometheus/client_golang
+  version: ^0.8.0
+  subpackages:
+  - prometheus
+- package: github.com/openzipkin/zipkin-go-opentracing
+  version: ^0.3.0
+- package: github.com/opentracing/opentracing-go
+  version: ^1.0.2
+  subpackages:
+  - log
+  - ext
+- package: github.com/jpillora/backoff
+- package: github.com/satori/go.uuid
+  version: ^1.1.0
+- package: github.com/prometheus/procfs
+- package: github.com/prometheus/common
+  subpackages:
+  - model
+  - expfmt
+- package: github.com/opentracing-contrib/go-observer
+- package: github.com/go-logfmt/logfmt
+  version: ^0.3.0
+- package: github.com/Shopify/sarama
+  version: ^1.12.0
+- package: github.com/beorn7/perks
+  subpackages:
+  - quantile
+- package: github.com/davecgh/go-spew
+  version: ^1.1.0
+  subpackages:
+  - spew
+- package: github.com/eapache/go-resiliency
+  version: ^1.0.0
+  subpackages:
+  - breaker
+- package: github.com/eapache/go-xerial-snappy
+- package: github.com/eapache/queue
+  version: ^1.0.2
+- package: github.com/gogo/protobuf
+  version: ^0.4.0
+  subpackages:
+  - proto
+- package: github.com/matttproud/golang_protobuf_extensions
+  version: ^1.0.0
+  subpackages:
+  - pbutil
+- package: github.com/prometheus/client_model
+  subpackages:
+  - go
+- package: github.com/golang/snappy
+- package: github.com/pierrec/lz4
+  version: ^1.0.0
+- package: github.com/rcrowley/go-metrics
+- package: github.com/pierrec/xxHash
+  version: ^0.1.1
+  subpackages:
+  - xxHash32
+- package: github.com/apache/thrift
+  version: ^0.10.0
+  subpackages:
+  - lib/go/thrift
